added new columns to data models
